--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     font-size: xx-large;
     background-color: yellow;
     text-align: center;
-    margin: 10;
+    margin: auto;
 }
 #genel{
     background-color: yellow;
